---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe check.js
```

## `biome.json`

```json
{
  "assist": { "enabled": true, "includes": ["**", "!check.js"] },
  "linter": { "enabled": false }
}
```

## `check.js`

```js
import { lorem, foom, bar } from "foo";
import * as something from "../something";

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
